add-pseudo-classes

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     <h3>Conheça outras mulheres que fizeram história na tecnologia:</h3>
 
       <nav>
-        <ul >
+        <ul class=links-divas>
           <li> 
             <a href="https://en.wikipedia.org/wiki/Grace_Hopper" target="_blank">Grace Hopper</a></li>
 
