--- a/index.html
+++ b/index.html
@@ -72,18 +72,18 @@
     <h3>Conheça outras mulheres que fizeram história na tecnologia:</h3>
 
       <nav>
-        <ul class=links-divas>
+        <ul>
           <li> 
-            <a href="https://en.wikipedia.org/wiki/Grace_Hopper" target="_blank">Grace Hopper</a></li>
+            <a class=links-divas href="https://en.wikipedia.org/wiki/Grace_Hopper" target="_blank">Grace Hopper</a></li>
 
           <li>
-            <a href="https://pt.wikipedia.org/wiki/Dorothy_Vaughan" target="_blank">Dorothy Vaughan</a></li>
+            <a class=links-divas href="https://pt.wikipedia.org/wiki/Dorothy_Vaughan" target="_blank">Dorothy Vaughan</a></li>
 
           <li>
-            <a href="https://pt.wikipedia.org/wiki/Margaret_Hamilton_(cientista_da_computa%C3%A7%C3%A3o)" target="_blank">Margaret Hamilton</a></li>
+            <a class=links-divas href="https://pt.wikipedia.org/wiki/Margaret_Hamilton_(cientista_da_computa%C3%A7%C3%A3o)" target="_blank">Margaret Hamilton</a></li>
 
           <li>
-            <a href="https://pt.wikipedia.org/wiki/Katherine_Johnson" target="_blank">Katherine Johnson</a></li>
+            <a class=links-divas href="https://pt.wikipedia.org/wiki/Katherine_Johnson" target="_blank">Katherine Johnson</a></li>
 
         </ul>
       </nav>
